--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-clean-css": "^4.3.0",
     "gulp-cli": "^3.0.0",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^5.1.0"
+    "gulp-sass": "^5.1.0",
+    "sass": "^1.75.0"
   }
 }
