--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-autoprefixer": "^9.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-cli": "^3.0.0",
+    "gulp-image": "^6.3.1",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "sass": "^1.75.0"
